src/tests/testfiles/ternary-operator/types-6.txt
testfiles/ternary-operator/types-6.c:4:6: error: invalid operands to logical 'or' (have 'int' and 'float')
(1 || 2.0 ? c[0] : 0);
 ^
testfiles/ternary-operator/types-6.c:4:17: error: invalid operands to ternary '?:', alternatives should be of equal type (have 'float' and 'int')
(1 || 2.0 ? c[0] : 0);
            ^
